package com.example.datapipeline;

public class ElasticConnector implements DatabaseConnector {
    @Override
    public void connect() {
        // Connect to Elastic database
        System.out.println("Connected to Elastic database.");
    }

    @Override
    public void insert(DataPoint data) {
        // Insert data into Elastic database
        System.out.println("Data inserted into Elastic: " + data);
    }

    @Override
    public boolean validate(DataPoint data) {
        // Validate data for Elastic database
        // (Dummy implementation, assume all data is valid)
        return true;
    }
}

