package com.example.datapipeline;

public class RedisConnector implements DatabaseConnector {
    @Override
    public void connect() {
        // Connect to Redis database
        System.out.println("Connected to Redis database.");
    }

    @Override
    public void insert(DataPoint data) {
        // Insert data into Redis database
        System.out.println("Data inserted into Redis: " + data);
    }

    @Override
    public boolean validate(DataPoint data) {
        // Validate data for Redis database
        // (Dummy implementation, assume all data is valid)
        return true;
    }
}

